fix alignment and title

--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@ body {
 
 .pizza {
     text-align: left;
-    margin-left: 377px;
+    margin-left: 290px;
     font-size: 35px;
     font-family: cursive;
     margin-top: 10px;
@@ -38,7 +38,7 @@ body {
 
 .pasta {
     text-align: left;
-    margin-left: 365px;
+    margin-left: 287px;
     font-size: 35px;
     font-family: cursive;
     margin-top: 10px;
@@ -53,7 +53,7 @@ body {
 
 .dessert {
     text-align: left;
-    margin-left: 355px;
+    margin-left: 280px;
     font-size: 35px;
     font-family: cursive;
     margin-top: 10px;
